Fix: Hello Header close menu on mobile [TMZ-638] (#316)

--- a/modules/template-parts/assets/scss/hello-plus-header.scss
+++ b/modules/template-parts/assets/scss/hello-plus-header.scss
@@ -277,16 +277,6 @@
 			width: var(--header-toggle-icon-size);
 		}
 
-		.ehp-header__toggle-icon--close {
-			color: var(--header-toggle-icon-color-active);
-			fill: var(--header-toggle-icon-color-active);
-		}
-
-		i {
-			color: var(--header-toggle-icon-color);
-			font-size: var(--header-toggle-icon-size);
-		}
-
 		&[aria-expanded="true"] {
 
 			.ehp-header__toggle-icon--open {
